--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Cab Price Prediction</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='style.css') }}">
+
 </head>
 <body>
   <h2>Cab Price Prediction</h2>
